manifests/deployment-config.yaml
---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: peribolos-as-services
spec:
  test: false
  replicas: 1
  selector:
    app.kubernetes.io/component: peribolos
    app.kubernetes.io/managed-by: sig-services
    service: peribolos-as-services
  template:
    metadata:
      labels:
        app.kubernetes.io/component: peribolos
        app.kubernetes.io/managed-by: sig-services
        service: peribolos-as-services
    spec:
      serviceAccountName: peribolos-as-services
      containers:
        - name: peribolos-as-services
          image: quay.io/harshad16/peribolos-as-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
